# cpp_error_utils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cpack-multi-platform.yml  static.yml
cmake/: CEPackaging.cmake  cpp_error_utils-config.cmake.in
doc/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  example.cpp  main.cpp
include/: error_utils.hpp  extra_error.hpp
scripts/: edit_doxyfile_headers.sh
tests/: CMakeLists.txt  test_error_utils.cpp
